# cellophane

./: Cargo.toml  README.md
src/: animator.rs  lib.rs
